# tool-website

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AI_CONTEXT.md  Caddyfile  Dockerfile  Makefile  README.md  add_index_habit.py  add_nav_habit.py  deploy.sh  docker-compose.yml  fix_index_seo.py  generate_thesaurus.py  gunicorn_conf.py  lighthouse-report.json  main.py  massive_audit_fast.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  run.sh  seo_rewrite.py  seo_rewrite_index.py  seo_rewrite_nav.py  seo_rewrite_pages.py  seo_schema_faq_injector.py  setup.sh  start_server.ps1  storybrain-ai.service  storybrain.service  temp_best_practice.json  temp_best_practice_emi.json  temp_best_practice_gst.json  temp_best_practice_habit.json  temp_burn.js  (+15 more)
app/: main.py
data/: tools.yaml
multi_tool_app/: main.py  test_main.py
rust_predictor/: Cargo.toml  pyproject.toml
scratch/: final_optimization.py  upgrade.py
scripts/: build.js  cloudpanel_proxy_setup.sh  cpanel_proxy_setup.sh  download_fonts.py  extract_tools_yaml.py  fix_related.py  migrate_og_tags.py
src/: input.css
static/: manifest.json  sitemap.xsl  sw.js
temp_check/: check_file.py  test_math.py
templates/: base.html  hub.html  index.html  offline.html  tools.html
tests/: conftest.py  test_analytics_service.py  test_api.py  test_base64_service.py  test_cache.py  test_catalog_service.py  test_config.py  test_crypto_service.py  test_exceptions.py  test_icons.py  test_image_service.py  test_job_service.py  test_log.py  test_metrics.py  (+5 more)
(+188 files in other folders)
