[project]
name = "storybrain-ai"
version = "1.0.0"
description = "StoryBrain AI — 70+ Free Online Tools"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C4", "EM", "G", "T20"]
ignore = ["E501", "EM101", "G004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM", "T20"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
exclude = ["venv/", ".git/", "node_modules/"]

[[tool.mypy.overrides]]
module = ["rust_predictor", "yfinance", "prophet", "rembg", "cv2"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
